<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_run"
        android:title="@string/action_run"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_find"
        android:title="@string/action_find"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_fix_imports"
        android:title="@string/action_fix_imports"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_to_definition"
        android:title="@string/action_go_to_definition"
        app:showAsAction="never" />
</menu>
